--- a/css/style.css
+++ b/css/style.css
@@ -66,3 +66,108 @@ text-align: right;
 	text-decoration: underline;
 }
 
+/*////// MEDIA /////////*/
+
+img, video, audio {
+	max-width: 100%;
+}
+
+
+/*////// LAYOUT /////////*/
+
+* {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+
+.wrapper {
+	width: 960px;
+	margin: 0 auto;
+	background: #eee;
+}
+
+/*span 1/3 of space*/
+.col-1 {
+	float: left;
+	/*100% - 2% margins btw columns 1&2 and 2&3 = 96/3 = 32 */
+	width: 32%;
+	background: #ccc;
+}
+
+/*span 2/3 of space*/
+.col-2 {
+	float: left;
+	/*100% - 2% margin - 32% last column = 66 */
+	width: 66%;
+	background: #ccc;
+
+}
+
+/*span whole space*/
+.col-3 {
+	background: #ccc
+}
+
+/*attribute selector: anything that has a class with "col- 
+in it, do this*/
+[class*="col-"] {
+	margin-left: 2%;
+}
+
+.first {
+	margin-left: 0%;
+}
+
+.clearfix:after {
+	content: ".";
+	display: block;
+	clear: both;
+	visibility: hidden;
+	height: 0;
+	line-height: 0;
+}
+
+/*////// SECTIONS /////////*/
+
+header {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	background: #fff;
+	z-index: 1;
+}
+
+section {
+	padding: 20px;
+	margin-bottom: 20px ;
+}
+
+/*////// SOCIAL /////////*/
+
+#social {
+	position: fixed;
+	top: 200px;
+	right: 20px;
+	width: 40px;
+	z-index: 1;
+}
+
+/* Descendant selector to select all of the links! */
+#social a {
+	display: block;
+	width: 40px;
+	height: 40px;
+	background: yellow;
+}
+
+
+
+
+
+
+
+
+
